2013-01-09  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Remove some stray references to WebKitPlatformSupport.h in DumpRenderTree
        https://bugs.webkit.org/show_bug.cgi?id=106520

        Reviewed by James Robinson.

        Part of a larger refactoring series. See tracking bug 82948.

        * DumpRenderTree/chromium/WebThemeEngineDRTMac.h:
        * DumpRenderTree/chromium/WebThemeEngineDRTMac.mm:

2013-01-09  Julie Parent  <jparent@chromium.org>

        Dashboard cleanup: Remove code for currentState and window.location.hash getting out of state
        https://bugs.webkit.org/show_bug.cgi?id=106514

        This is old code, as these can no longer get out of sync.
        permmaLinkURLHash is generated from currentState, which is set only
        from the location.  The commment about how these can get out of sync
        refers to a function that no longer exists.
        
        Reviewed by Dirk Pranke.

        * TestResultServer/static-dashboards/dashboard_base.js:
        (handleLocationChange):

2013-01-09  Julie Parent  <jparent@chromium.org>

        Dashboard Cleanup: Reload the page as soon as we know we need to.
        https://bugs.webkit.org/show_bug.cgi?id=106515

        No need to continue parsing all of the data once we know that
        we need to do a reload.
        
        Reviewed by Dirk Pranke.

        * TestResultServer/static-dashboards/dashboard_base.js:
        (parseParameters):

2013-01-09  Eric Seidel  <eric@webkit.org>

        run-perf-tests --chromium-android --profile should show symbols for the kernel
        https://bugs.webkit.org/show_bug.cgi?id=106498

        Reviewed by Adam Barth.

        Turns out this was easy, once I finally read the output from "perf report".
        It appears there may be a bug in "perf record" on android, as it complains
        about not being able to read from /proc/kallsyms even when
        /proc/sys/kernel/kptr_restrict is 0.  For now I've not bothered